--- a/SQLite with RecyclerView/app/src/main/AndroidManifest.xml
+++ b/SQLite with RecyclerView/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.ListOfTasks"
         tools:targetApi="31">
         <activity
+            android:name=".AddTaskActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
