--- a/SQLite with RecyclerView/app/src/main/AndroidManifest.xml
+++ b/SQLite with RecyclerView/app/src/main/AndroidManifest.xml
@@ -13,14 +13,14 @@
         android:theme="@style/Theme.ListOfTasks"
         tools:targetApi="31">
         <activity
-            android:name=".Activitys.AddTaskActivity"
+            android:name="br.com.flap.listoftask.AddTaskActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".Activitys.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ListOfTasks.NoActionBar">
