--- a/FirebaseApp/app/build.gradle
+++ b/FirebaseApp/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database:11.0.4'
+    implementation'com.google.firebase:firebase-auth'
 }
