--- a/FirebaseApp/app/build.gradle
+++ b/FirebaseApp/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database:11.0.4'
     implementation'com.google.firebase:firebase-auth'
+    implementation platform('com.google.firebase:firebase-bom:11.0.4')
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
 }
